--- a/docs/api/toc.yml
+++ b/docs/api/toc.yml
@@ -48,6 +48,8 @@
     name.vb: ISearchable(Of T)
   - uid: CommonBotLibrary.Interfaces.IStockService
     name: IStockService
+  - uid: CommonBotLibrary.Interfaces.ITriviaService
+    name: ITriviaService
   - uid: CommonBotLibrary.Interfaces.IWeatherService
     name: IWeatherService
   - uid: CommonBotLibrary.Interfaces.IWebpageService
@@ -65,6 +67,8 @@
     name: MovieBase
   - uid: CommonBotLibrary.Interfaces.Models.SymbolBase
     name: SymbolBase
+  - uid: CommonBotLibrary.Interfaces.Models.TriviaBase
+    name: TriviaBase
   - uid: CommonBotLibrary.Interfaces.Models.WeatherBase
     name: WeatherBase
   - uid: CommonBotLibrary.Interfaces.Models.WeatherBase.Unit
@@ -80,6 +84,8 @@
     name: NCalcService
   - uid: CommonBotLibrary.Services.OmdbService
     name: OmdbService
+  - uid: CommonBotLibrary.Services.OpenTriviaDbService
+    name: OpenTriviaDbService
   - uid: CommonBotLibrary.Services.OpenWeatherMapService
     name: OpenWeatherMapService
   - uid: CommonBotLibrary.Services.RandomService
@@ -113,6 +119,14 @@
     name: OmdbSearchResult
   - uid: CommonBotLibrary.Services.Models.OmdbType
     name: OmdbType
+  - uid: CommonBotLibrary.Services.Models.OpenTriviaDbCategory
+    name: OpenTriviaDbCategory
+  - uid: CommonBotLibrary.Services.Models.OpenTriviaDbDifficulty
+    name: OpenTriviaDbDifficulty
+  - uid: CommonBotLibrary.Services.Models.OpenTriviaDbResult
+    name: OpenTriviaDbResult
+  - uid: CommonBotLibrary.Services.Models.OpenTriviaDbType
+    name: OpenTriviaDbType
   - uid: CommonBotLibrary.Services.Models.OpenWeatherMapResult
     name: OpenWeatherMapResult
   - uid: CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates
